--- a/index.html
+++ b/index.html
@@ -1,76 +1,21 @@
-=<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PoorCoin - Official Website</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #0d1117;
-      color: #e6edf3;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-    }
-    header {
-      background: #161b22;
-      padding: 20px;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-      color: #00c853;
-    }
-    header p {
-      font-size: 1.2rem;
-      margin-top: 5px;
-    }
-    .logo {
-      margin: 20px auto;
-      width: 150px;
-    }
-    section {
-      padding: 30px 20px;
-    }
-    section h2 {
-      color: #00c853;
-    }
-    .buttons a {
-      display: inline-block;
-      margin: 10px;
-      padding: 12px 20px;
-      text-decoration: none;
-      border-radius: 8px;
-      background: #00c853;
-      color: white;
-      font-weight: bold;
-      transition: 0.3s;
-    }
-    .buttons a:hover {
-      background: #009624;
-    }
-    footer {
-      background: #161b22;
-      padding: 15px;
-      margin-top: 20px;
-      font-size: 0.9rem;
-    }
-  </style>
+  <title>PoorCoin</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <header>
     <h1>PoorCoin</h1>
     <p>The community-driven token on BNB Smart Chain</p>
   </header>
 
-  <img src="https://gateway.pinata.cloud/ipfs/bafybeihhtjwdnldwmn6u4yjhfh3a7owqslzgxb7c7znpg5ww4b3yky7e5e/poorcoin-logo.png" alt="PoorCoin Logo" class="logo">
-
   <section>
     <h2>About PoorCoin</h2>
-    <p>PoorCoin (POOR) is a decentralized meme token created for the community.  
-       With a total supply of 1,000,000,000 POOR, our mission is to build a fun, transparent and fair ecosystem.</p>
+    <p>PoorCoin (POOR) is a decentralized meme token created for the community.
+    With a total supply of 1,000,000,000 POOR, our mission is to build a fun, transparent and fair ecosystem.</p>
   </section>
 
   <section>
@@ -85,6 +30,5 @@
   <footer>
     <p>© 2025 PoorCoin | Built by the community</p>
   </footer>
-
 </body>
 </html>
