--- a/index.html
+++ b/index.html
@@ -3,8 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PoorCoin</title>
-  <link rel="stylesheet" href="style.css">
+  <title>PoorCoin - Official Website</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #111;
+      color: #fff;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    header {
+      padding: 20px;
+    }
+    h1 {
+      color: #00ff00;
+    }
+    section {
+      margin: 30px auto;
+      max-width: 700px;
+    }
+    .buttons a {
+      display: inline-block;
+      margin: 10px;
+      padding: 12px 24px;
+      background: #00cc00;
+      color: #000;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 8px;
+      transition: 0.3s;
+    }
+    .buttons a:hover {
+      background: #00ff00;
+    }
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      font-size: 14px;
+      color: #aaa;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -15,7 +54,8 @@
   <section>
     <h2>About PoorCoin</h2>
     <p>PoorCoin (POOR) is a decentralized meme token created for the community.
-    With a total supply of 1,000,000,000 POOR, our mission is to build a fun, transparent and fair ecosystem.</p>
+       With a total supply of 1,000,000,000 POOR, our mission is to build a fun,
+       transparent and fair ecosystem.</p>
   </section>
 
   <section>
@@ -28,7 +68,7 @@
   </section>
 
   <footer>
-    <p>© 2025 PoorCoin | Built by the community</p>
+    © 2025 PoorCoin | Built by the community
   </footer>
 </body>
 </html>
