--- a/index.html
+++ b/index.html
@@ -3,72 +3,94 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PoorCoin - Official Website</title>
+  <title>PoorCoin (POOR)</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #111;
-      color: #fff;
+      background: linear-gradient(to right, #f0f8ff, #e8ffe8);
+      color: #222;
       margin: 0;
       padding: 0;
-      text-align: center;
     }
     header {
-      padding: 20px;
+      text-align: center;
+      padding: 40px 20px;
+    }
+    header img {
+      max-width: 120px;
+      margin-bottom: 15px;
     }
     h1 {
-      color: #00ff00;
+      font-size: 2.5em;
+      margin: 0;
+      color: #2a7a2a;
+    }
+    p {
+      font-size: 1.2em;
+      margin-top: 10px;
     }
     section {
-      margin: 30px auto;
-      max-width: 700px;
+      text-align: center;
+      padding: 40px 20px;
+    }
+    h2 {
+      color: #2a7a2a;
+    }
+    .buttons {
+      margin-top: 25px;
     }
     .buttons a {
       display: inline-block;
       margin: 10px;
-      padding: 12px 24px;
-      background: #00cc00;
-      color: #000;
+      padding: 12px 25px;
+      background: #2a7a2a;
+      color: white;
       text-decoration: none;
+      border-radius: 30px;
       font-weight: bold;
-      border-radius: 8px;
       transition: 0.3s;
     }
     .buttons a:hover {
-      background: #00ff00;
+      background: #45a045;
     }
     footer {
-      margin-top: 40px;
+      text-align: center;
       padding: 20px;
-      font-size: 14px;
-      color: #aaa;
+      margin-top: 40px;
+      background: #f4f4f4;
+      font-size: 0.9em;
+      color: #555;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>PoorCoin</h1>
-    <p>The community-driven token on BNB Smart Chain</p>
-  </header>
 
-  <section>
-    <h2>About PoorCoin</h2>
-    <p>PoorCoin (POOR) is a decentralized meme token created for the community.
-       With a total supply of 1,000,000,000 POOR, our mission is to build a fun,
-       transparent and fair ecosystem.</p>
-  </section>
+<header>
+  <img src="https://gateway.pinata.cloud/ipfs/bafybeihhtjwdnlwmn6u4yjhfh3a7ows1qzxb7c7npg5uwd3yk7e5epoorcoin-logo.png" alt="PoorCoin Logo">
+  <h1>PoorCoin</h1>
+  <p>The community-driven token on BNB Smart Chain</p>
+</header>
 
-  <section>
-    <h2>Quick Links</h2>
-    <div class="buttons">
-      <a href="https://t.me/yourtelegram" target="_blank">Telegram</a>
-      <a href="https://twitter.com/yourtwitter" target="_blank">Twitter</a>
-      <a href="https://pancakeswap.finance/swap?outputCurrency=0x4B336AABbB057503aD2a588201D56F0e6EadC281" target="_blank">Buy on PancakeSwap</a>
-    </div>
-  </section>
+<section>
+  <h2>About PoorCoin</h2>
+  <p>
+    PoorCoin (POOR) is a decentralized meme token created for the community.<br>
+    With a total supply of <strong>1,000,000,000 POOR</strong>, our mission is to build a fun, transparent, and fair ecosystem.
+  </p>
+</section>
 
-  <footer>
-    © 2025 PoorCoin | Built by the community
-  </footer>
+<section>
+  <h2>Quick Links</h2>
+  <div class="buttons">
+    <a href="https://t.me/yourtelegram" target="_blank">Telegram</a>
+    <a href="https://twitter.com/yourtwitter" target="_blank">Twitter</a>
+    <a href="https://pancakeswap.finance/swap?outputCurrency=0x4B336AABbB057503aD2a588201D56F0e6EadC281" target="_blank">Buy on PancakeSwap</a>
+  </div>
+</section>
+
+<footer>
+  © 2025 PoorCoin | Built by the community
+</footer>
+
 </body>
 </html>
