--- a/index.html
+++ b/index.html
@@ -1,96 +1,113 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PoorCoin (POOR)</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>PoorCoin (POOR) — Official Website</title>
+  <meta name="description" content="PoorCoin (POOR) is a community-driven meme token on BNB Smart Chain. Fair, transparent and fun. Trade on PancakeSwap.">
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #f0f8ff, #e8ffe8);
-      color: #222;
-      margin: 0;
-      padding: 0;
+    :root{
+      --bg:#f7fbff; --panel:#ffffff; --muted:#5b6b7c; --text:#12212e; --primary:#2ea44f; --accent:#31c3a6; --border:#e6eef5;
+      --chip:#eef6ff; --chipb:#d9ecff;
     }
-    header {
-      text-align: center;
-      padding: 40px 20px;
-    }
-    header img {
-      max-width: 120px;
-      margin-bottom: 15px;
-    }
-    h1 {
-      font-size: 2.5em;
-      margin: 0;
-      color: #2a7a2a;
-    }
-    p {
-      font-size: 1.2em;
-      margin-top: 10px;
-    }
-    section {
-      text-align: center;
-      padding: 40px 20px;
-    }
-    h2 {
-      color: #2a7a2a;
-    }
-    .buttons {
-      margin-top: 25px;
-    }
-    .buttons a {
-      display: inline-block;
-      margin: 10px;
-      padding: 12px 25px;
-      background: #2a7a2a;
-      color: white;
-      text-decoration: none;
-      border-radius: 30px;
-      font-weight: bold;
-      transition: 0.3s;
-    }
-    .buttons a:hover {
-      background: #45a045;
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      margin-top: 40px;
-      background: #f4f4f4;
-      font-size: 0.9em;
-      color: #555;
-    }
+    *{box-sizing:border-box}
+    html,body{margin:0}
+    body{font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Helvetica,Arial,sans-serif;background:linear-gradient(180deg,#f3fbff 0%, #f8fff5 100%);color:var(--text);line-height:1.6}
+    .container{width:min(1080px,92vw);margin-inline:auto}
+    a{color:var(--primary);text-decoration:none}
+    .btn{display:inline-block;padding:.85rem 1.1rem;border-radius:.9rem;background:var(--primary);color:#fff;font-weight:800;border:1px solid transparent;transition:transform .1s ease, box-shadow .1s ease}
+    .btn:hover{transform:translateY(-1px);box-shadow:0 10px 24px rgba(46,164,79,.2)}
+    .btn.outline{background:#fff;color:var(--primary);border:1px solid var(--primary)}
+    .btn.ghost{background:#e9f8ef;color:#0d2917;border:1px solid #c7ebd1}
+    .chip{display:inline-block;background:linear-gradient(180deg,var(--chip),#f7fbff);border:1px solid var(--chipb);padding:.45rem .7rem;border-radius:.7rem;color:#2a3b4c;font-weight:600}
+    header.site{position:sticky;top:0;z-index:20;background:rgba(255,255,255,.75);backdrop-filter:saturate(140%) blur(8px);border-bottom:1px solid var(--border)}
+    .nav{display:flex;align-items:center;justify-content:space-between;padding:.9rem 0}
+    .brand{display:flex;align-items:center;gap:.6rem;color:#0f1f2a;font-weight:900}
+    .brand img{width:40px;height:40px;border-radius:10px;box-shadow:0 6px 18px rgba(0,0,0,.08)}
+    .brand span{font-size:1.15rem}
+    .links{display:flex;gap:1rem;align-items:center}
+    .hero{padding:56px 0 24px}
+    .hero-inner{text-align:center}
+    h1{font-size:clamp(1.9rem,3.2vw,3rem);line-height:1.15;margin:.3rem 0}
+    .sub{color:var(--muted);max-width:720px;margin:0 auto}
+    .cta{display:flex;justify-content:center;gap:.7rem;flex-wrap:wrap;margin-top:14px}
+    .section{padding:56px 0}
+    .grid{display:grid;gap:1.1rem}
+    .two{grid-template-columns:repeat(2,minmax(0,1fr))}
+    .three{grid-template-columns:repeat(3,minmax(0,1fr))}
+    @media (max-width:900px){.two,.three{grid-template-columns:1fr}}
+    .card{background:var(--panel);border:1px solid var(--border);border-radius:16px;padding:18px}
+    h2{font-size:clamp(1.45rem,2.2vw,2rem);margin:.2rem 0 .9rem}
+    h3{margin:.2rem 0 .6rem}
+    ul.clean{padding-left:1.1rem}
+    .stat{display:flex;flex-direction:column;gap:.2rem;align-items:center;text-align:center}
+    .stat .v{font-size:1.35rem;font-weight:900}
+    .muted{color:var(--muted)}
+    .contract{display:flex;gap:.6rem;align-items:center;background:#f4fbf6;border:1px dashed #c5ead2;border-radius:12px;padding:.6rem .75rem}
+    .contract code{font-family:ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;word-break:break-all}
+    .copy{margin-left:auto;border:1px solid #cfeadd;background:#fff;border-radius:.6rem;padding:.4rem .6rem;cursor:pointer}
+    .copy:hover{background:#f1fff7}
+    .timeline{position:relative;margin-top:8px;padding-left:20px}
+    .timeline:before{content:"";position:absolute;left:6px;top:4px;bottom:4px;width:2px;background:linear-gradient(var(--accent),transparent)}
+    .titem{position:relative;margin:16px 0}
+    .dot{position:absolute;left:-1px;top:.35rem;width:10px;height:10px;border-radius:999px;background:var(--accent);box-shadow:0 0 0 .35rem rgba(49,195,166,.25)}
+    footer.site{border-top:1px solid var(--border);background:#fff}
+    .foot{display:flex;justify-content:space-between;align-items:center;gap:.8rem;padding:18px 0;flex-wrap:wrap}
+    .socials{display:flex;gap:.9rem}
   </style>
 </head>
 <body>
+  <!-- Top nav -->
+  <header class="site">
+    <div class="container nav">
+      <a class="brand" href="#">
+        <img src="https://ipfs.io/ipfs/bafkreifvwdfzahh6ul2bseueh4427uea722o3m7zxlcnuc4m4orgn4i4ry" alt="PoorCoin logo">
+        <span>PoorCoin</span>
+      </a>
+      <nav class="links">
+        <a href="#about">About</a>
+        <a href="#tokenomics">Tokenomics</a>
+        <a href="#buy">Buy</a>
+        <a href="#roadmap">Roadmap</a>
+        <a class="btn" href="https://t.me/poorcoin_bsc" target="_blank" rel="noopener">Join Telegram</a>
+      </nav>
+    </div>
+  </header>
 
-<header>
-  <img src="https://gateway.pinata.cloud/ipfs/bafybeihhtjwdnlwmn6u4yjhfh3a7ows1qzxb7c7npg5uwd3yk7e5epoorcoin-logo.png" alt="PoorCoin Logo">
-  <h1>PoorCoin</h1>
-  <p>The community-driven token on BNB Smart Chain</p>
-</header>
+  <!-- Hero -->
+  <section class="hero">
+    <div class="container hero-inner">
+      <span class="chip">BNB Smart Chain • BEP-20</span>
+      <h1>Community-driven meme token that keeps it fun & fair.</h1>
+      <p class="sub">POOR runs on BNB Smart Chain with a fixed supply and a simple mission: build together with transparency and good vibes.</p>
+      <div class="cta">
+        <a class="btn" href="https://pancakeswap.finance/swap?outputCurrency=0x4B336AABbB057503aD2a588201D56F0e6EadC281" target="_blank" rel="noopener">Buy on PancakeSwap</a>
+        <a class="btn outline" href="https://bscscan.com/token/0x4B336AABbB057503aD2a588201D56F0e6EadC281" target="_blank" rel="noopener">View on BscScan</a>
+        <a class="btn ghost" href="https://www.geckoterminal.com/bsc/pools/0xec7e56657bb005d3e10add91f72459fd3bbee2d1" target="_blank" rel="noopener">Live Chart</a>
+      </div>
+    </div>
+  </section>
 
-<section>
-  <h2>About PoorCoin</h2>
-  <p>
-    PoorCoin (POOR) is a decentralized meme token created for the community.<br>
-    With a total supply of <strong>1,000,000,000 POOR</strong>, our mission is to build a fun, transparent, and fair ecosystem.
-  </p>
-</section>
-
-<section>
-  <h2>Quick Links</h2>
-  <div class="buttons">
-    <a href="https://t.me/yourtelegram" target="_blank">Telegram</a>
-    <a href="https://twitter.com/yourtwitter" target="_blank">Twitter</a>
-    <a href="https://pancakeswap.finance/swap?outputCurrency=0x4B336AABbB057503aD2a588201D56F0e6EadC281" target="_blank">Buy on PancakeSwap</a>
-  </div>
-</section>
-
-<footer>
-  © 2025 PoorCoin | Built by the community
-</footer>
-
-</body>
-</html>
+  <!-- About / Quick links -->
+  <section id="about" class="section">
+    <div class="container grid two">
+      <div class="card">
+        <h2>About PoorCoin</h2>
+        <p>PoorCoin (POOR) is a decentralized meme token on BNB Smart Chain focused on community, clarity and meme energy. Total supply is <b>1,000,000,000 POOR</b>. No over-engineering — just vibes, holders and steady growth.</p>
+        <ul class="clean">
+          <li>Open contract • Public pair on PancakeSwap (V2)</li>
+          <li>Transparent supply and simple tokenomics</li>
+          <li>Community-first roadmap and culture</li>
+        </ul>
+      </div>
+      <div class="card">
+        <h3>Smart Contract</h3>
+        <div class="contract">
+          <code id="ca">0x4B336AABbB057503aD2a588201D56F0e6EadC281</code>
+          <button class="copy" onclick="copyCA()">Copy</button>
+        </div>
+        <div style="margin-top:10px;display:grid;gap:.45rem">
+          <a href="https://bscscan.com/token/0x4B336AABbB057503aD2a588201D56F0e6EadC281" target="_blank" rel="noopener">BscScan (token)</a>
+          <a href="https://pancakeswap.finance/swap?outputCurrency=0x4B336AABbB057503aD2a588201D56F0e6EadC281" target="_blank" rel="noope
