--- a/index.html
+++ b/index.html
@@ -1,224 +1,141 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>PoorCoin (POOR) — Official Website</title>
-  <meta name="description" content="PoorCoin (POOR) — a community-driven meme token on BNB Smart Chain. Fun, transparent and fair." />
-  <meta property="og:title" content="PoorCoin (POOR) — Official Website" />
-  <meta property="og:description" content="Community-driven meme token on BNB Smart Chain." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://poorcoin.net/" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>PoorCoin (POOR) • Official Site</title>
+  <meta name="description" content="PoorCoin (POOR) — community-driven meme token on BNB Smart Chain." />
+  <link rel="icon" href="https://gateway.pinata.cloud/ipfs/bafybeihhtjwdnlwmdn6u45hjfha37owqs1qzxb7c2npz9uw8b3yk7e5e/poorcoin-logo.png">
   <style>
     :root{
-      --accent:#27ae60;       /* основен зелен */
-      --accent-2:#20bf6b;     /* втори зелен за градиент/hover */
-      --text:#1f2937;         /* тъмно сиво */
-      --muted:#6b7280;        /* по-светло сиво */
-      --bg1:#e8f8ff;          /* градиент начало */
-      --bg2:#f9fbff;          /* градиент край */
-      --card:#ffffff;         /* карта */
-      --radius:18px;
-      --shadow:0 10px 30px rgba(0,0,0,.08);
+      --bg:#f8fbf7;
+      --card:#ffffff;
+      --text:#1b2b1a;
+      --muted:#5f6f5d;
+      --accent:#27ae60;
+      --accent-2:#1f8f4f;
+      --ring: rgba(39,174,96,.25);
+      --soft:#eef7f0;
     }
-
-    /* Глобални */
     *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
-      color:var(--text);
-      background: linear-gradient(135deg, var(--bg1), var(--bg2));
-    }
-    a{color:inherit}
-
-    .container{
-      max-width:1080px;
-      margin:0 auto;
-      padding:28px 20px 56px;
-    }
-
-    /* Header */
-    .hero{
-      display:flex;
-      align-items:center;
-      gap:24px;
-      padding:22px;
-      background:var(--card);
-      border-radius:var(--radius);
-      box-shadow:var(--shadow);
-    }
-    .logo{
-      width:86px;
-      height:86px;
-      border-radius:20px;
-      object-fit:cover;
-      box-shadow:0 6px 18px rgba(39,174,96,.18);
-      flex:0 0 auto;
-    }
-    .title-wrap{
-      flex:1;
-    }
-    h1{
-      margin:0 0 6px;
-      font-size:clamp(28px, 3.2vw, 40px);
-      letter-spacing:.2px;
-    }
-    .tagline{
-      margin:0;
-      color:var(--muted);
-      font-size:clamp(14px, 1.8vw, 16px);
-    }
-
-    /* Карта със съдържание */
-    .card{
-      margin-top:22px;
-      background:var(--card);
-      border-radius:var(--radius);
-      box-shadow:var(--shadow);
-      padding:28px;
-    }
-    .grid{
-      display:grid;
-      grid-template-columns: 1.1fr .9fr;
-      gap:30px;
-    }
-    @media (max-width:860px){
+    html,body{margin:0;background:var(--bg);color:var(--text);font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
+    a{color:var(--accent);text-decoration:none}
+    .wrap{max-width:1100px;margin:auto;padding:24px}
+    header{display:flex;gap:16px;align-items:center;justify-content:space-between;margin:10px 0 24px}
+    .brand{display:flex;gap:14px;align-items:center}
+    .brand img{width:56px;height:56px;border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,.08)}
+    h1{font-size:clamp(28px,4vw,40px);margin:0}
+    .grid{display:grid;grid-template-columns:1.2fr .8fr;gap:18px}
+    .card{background:var(--card);border-radius:18px;padding:18px;box-shadow:0 8px 24px rgba(0,0,0,.06);border:1px solid #e9efe9}
+    .pill{display:inline-block;background:var(--soft);color:var(--muted);padding:6px 10px;border-radius:999px;font-size:12px;margin:6px 6px 0 0}
+    .buttons{display:flex;flex-wrap:wrap;gap:10px;margin:12px 0}
+    .btn{appearance:none;border:0;border-radius:12px;padding:12px 16px;background:var(--accent);color:#fff;font-weight:600;cursor:pointer;box-shadow:0 8px 22px var(--ring);transition:.15s}
+    .btn:hover{transform:translateY(-1px);background:var(--accent-2)}
+    .btn.outline{background:transparent;color:var(--accent);border:2px solid var(--accent)}
+    .cols{display:grid;grid-template-columns:repeat(3,1fr);gap:12px}
+    .tile{background:var(--soft);border:1px solid #e3eee5;border-radius:14px;padding:12px}
+    .tile .k{font-size:12px;color:var(--muted)}
+    .tile .v{font-weight:700}
+    .section{margin:22px 0}
+    h2{margin:0 0 10px;font-size:22px}
+    .notice{background:#fff5cc;border:1px solid #ffe28a;color:#6a5200;border-radius:12px;padding:10px 12px;font-size:14px;margin:10px 0}
+    footer{margin:30px 0 10px;color:var(--muted);font-size:14px;text-align:center}
+    code{background:#f1f5f1;border:1px solid #e6eee7;padding:2px 6px;border-radius:6px}
+    .copy{display:flex;gap:8px;align-items:center}
+    .small{font-size:13px;color:var(--muted)}
+    @media (max-width:900px){
       .grid{grid-template-columns:1fr}
-      .hero{flex-direction:column; text-align:center}
-      .title-wrap{align-items:center}
+      .cols{grid-template-columns:1fr 1fr}
     }
-
-    h2{
-      margin:0 0 12px;
-      font-size:clamp(20px, 2.4vw, 26px);
+    @media (max-width:620px){
+      .cols{grid-template-columns:1fr}
+      header{flex-direction:column;align-items:flex-start}
     }
-    p{margin:0 0 14px; line-height:1.6}
-
-    /* Инфо чипове */
-    .chips{display:flex; flex-wrap:wrap; gap:10px; margin-top:14px}
-    .chip{
-      padding:8px 12px;
-      border-radius:999px;
-      background:#f3f4f6;
-      color:#374151;
-      font-size:14px;
-    }
-
-    /* Бутони */
-    .buttons{display:flex; flex-wrap:wrap; gap:12px; margin-top:16px}
-    .btn{
-      display:inline-flex; align-items:center; justify-content:center;
-      padding:12px 18px;
-      border-radius:12px;
-      text-decoration:none;
-      font-weight:700;
-      transition:transform .12s ease, box-shadow .2s ease, background .2s ease;
-      box-shadow: 0 6px 16px rgba(39,174,96,.18);
-      background:linear-gradient(135deg, var(--accent), var(--accent-2));
-      color:#fff;
-    }
-    .btn:hover{transform:translateY(-1px)}
-    .btn.secondary{
-      background:#eef2ff;
-      color:#374151;
-      box-shadow:none;
-      border:1px solid #e5e7eb;
-    }
-    .btn.full{width:100%}
-
-    /* Списък с характеристики */
-    .list{display:grid; gap:10px; margin-top:10px}
-    .item{
-      display:flex; gap:12px; align-items:flex-start;
-      padding:12px 14px;
-      border:1px solid #eef0f3; border-radius:12px; background:#fafbff;
-    }
-    .item strong{display:block; font-size:14px}
-    .mono{font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace}
-
-    /* Footer */
-    footer{
-      text-align:center; color:var(--muted);
-      font-size:14px; margin-top:22px;
-    }
-
-    /* Малък helper за копиране */
-    .copy{
-      display:inline-flex; align-items:center; gap:8px; white-space:nowrap;
-      padding:8px 10px; border-radius:10px; border:1px dashed #d1d5db; background:#ffffff;
-      cursor:pointer; user-select:none;
-    }
-    .copy:hover{background:#f9fafb}
   </style>
 </head>
 <body>
-  <div class="container">
-
-    <!-- HERO -->
-    <header class="hero">
-      <img class="logo"
-           src="https://gateway.pinata.cloud/ipfs/bafkreifvwdfzahh6ul2bseueh4427uea722o3m7zxlcnuc4m4orgn4i4ry"
-           alt="PoorCoin Logo" />
-      <div class="title-wrap">
-        <h1>PoorCoin (POOR)</h1>
-        <p class="tagline">The community-driven meme token on BNB Smart Chain.</p>
+  <div class="wrap">
+    <header>
+      <div class="brand">
+        <img alt="PoorCoin Logo" src="https://gateway.pinata.cloud/ipfs/bafybeihhtjwdnlwmdn6u45hjfha37owqs1qzxb7c2npz9uw8b3yk7e5e/poorcoin-logo.png">
+        <div>
+          <h1>PoorCoin (POOR)</h1>
+          <div class="small">The community-driven meme token on BNB Smart Chain</div>
+        </div>
       </div>
-      <a class="btn" href="https://pancakeswap.finance/swap?outputCurrency=0x4B3...C281" target="_blank" rel="noopener">Buy on PancakeSwap</a>
+      <div class="buttons">
+        <a class="btn" href="https://pancakeswap.finance/swap?outputCurrency=0x4B33A6CABb80575630a2b58281D56F0E6e8Cd281" target="_blank" rel="noopener">Buy on PancakeSwap</a>
+        <a class="btn outline" href="https://www.dextools.io/app/en/bnb/pair-explorer/0xec7...e2d1" target="_blank" rel="noopener">DEXTools</a>
+        <button class="btn outline" id="addMeta">Add to MetaMask</button>
+      </div>
     </header>
 
-    <!-- CONTENT -->
-    <main class="card">
-      <div class="grid">
-        <!-- Лява колона -->
-        <section>
-          <h2>About PoorCoin</h2>
-          <p>
-            PoorCoin (POOR) is a decentralized meme token built by and for the community.
-            Our mission is to keep things fun, transparent and fair while we experiment,
-            learn and grow together.
-          </p>
+    <div class="notice">
+      <strong>Draft data:</strong> Tokenomics & roadmap are being finalized with the community. Values marked as <em>placeholder</em> will be updated after a community vote.
+    </div>
 
-          <div class="chips">
-            <span class="chip">Chain: BNB Smart Chain</span>
-            <span class="chip">Ticker: POOR</span>
-            <span class="chip">Supply: 1,000,000,000</span>
-          </div>
+    <div class="grid">
+      <!-- Left column: About + Tokenomics -->
+      <div class="card">
+        <h2>About PoorCoin</h2>
+        <p>PoorCoin (POOR) is a decentralized meme token created by and for the community. Mission: to keep things fun, transparent and fair while we experiment, learn and grow together.</p>
+        <div class="cols" style="margin-top:8px">
+          <div class="tile"><div class="k">Chain</div><div class="v">BNB Smart Chain</div></div>
+          <div class="tile"><div class="k">Ticker</div><div class="v">POOR</div></div>
+          <div class="tile"><div class="k">Total Supply</div><div class="v">1,000,000,000</div></div>
+        </div>
 
-          <div class="buttons">
-            <a class="btn" href="https://t.me/yourtelegram" target="_blank" rel="noopener">Telegram</a>
-            <a class="btn secondary" href="https://twitter.com/yourtwitter" target="_blank" rel="noopener">Twitter/X</a>
-          </div>
-        </section>
-
-        <!-- Дясна колона -->
-        <aside>
-          <h2>Quick Links</h2>
-
-          <div class="list">
-            <div class="item">
-              <div>
-                <strong>Contract</strong>
-                <div class="copy" id="copyContract"
-                     data-full="0x4B3...C281">
-                  <span class="mono" id="contractText">0x4B3...C281</span>
-                  <span>• Copy</span>
-                </div>
-              </div>
+        <div class="section">
+          <h2>Tokenomics <span class="small">(placeholder)</span></h2>
+          <div class="cols">
+            <div class="tile">
+              <div class="k">Buy/Sell Tax</div>
+              <div class="v">0%</div>
             </div>
-
-            <div class="item">
-              <div>
-                <strong>Trade</strong>
-                <a class="btn full"
-                   href="https://pancakeswap.finance/swap?outputCurrency=0x4B3...C281"
-                   target="_blank" rel="noopener">Open PancakeSwap</a>
-              </div>
+            <div class="tile">
+              <div class="k">Liquidity</div>
+              <div class="v">Locked/Burned: 95% <span class="small">(placeholder)</span></div>
             </div>
+            <div class="tile">
+              <div class="k">Team</div>
+              <div class="v">5% <span class="small">(vesting – placeholder)</span></div>
+            </div>
+          </div>
+          <p class="small">Update these numbers with exact values (or set tax to your real value). If any allocation differs, change the text and push.</p>
+        </div>
 
-            <div class="item">
-              <div>
-                <strong>DexTools</strong>
-                <a class="btn secondary full"
-                   href="https://www.dextools.io/app/en/bnb/pair-explorer/0xEC7...E2D1
+        <div class="section">
+          <h2>Contract</h2>
+          <div class="copy">
+            <code id="addr">0x4B33A6CABb80575630a2b58281D56F0E6e8Cd281</code>
+            <button class="btn outline" id="copyBtn">Copy</button>
+          </div>
+          <div class="buttons" style="margin-top:10px">
+            <a class="btn outline" target="_blank" rel="noopener" href="https://bscscan.com/token/0x4B33A6CABb80575630a2b58281D56F0E6e8Cd281">View on BscScan</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Right column: Quick Links -->
+      <div class="card">
+        <h2>Quick Links</h2>
+        <div class="buttons">
+          <a class="btn outline" href="https://t.me/yourtelegram" target="_blank" rel="noopener">Telegram</a>
+          <a class="btn outline" href="https://twitter.com/yourtwitter" target="_blank" rel="noopener">Twitter/X</a>
+        </div>
+        <div class="section">
+          <div class="tile">
+            <div class="k">Trade</div>
+            <div class="v"><a href="https://pancakeswap.finance/swap?outputCurrency=0x4B33A6CABb80575630a2b58281D56F0E6e8Cd281" target="_blank" rel="noopener">Open PancakeSwap</a></div>
+          </div>
+        </div>
+        <div class="section">
+          <div class="tile">
+            <div class="k">DEXTools Pair</div>
+            <div class="v"><a href="https://www.dextools.io/app/en/bnb/pair-explorer/0xec7...e2d1" target="_blank" rel="noopener">View Chart</a></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <
