--- a/whitepaper.html
+++ b/whitepaper.html
@@ -4,14 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PoorCoin — Whitepaper</title>
-  <link rel="stylesheet" href="style.css" />
   <meta name="description" content="PoorCoin (POOR) whitepaper." />
+  <link rel="stylesheet" href="style.css" />
+
+  <meta property="og:title" content="PoorCoin — Whitepaper" />
+  <meta property="og:image" content="https://poorcoin.net/assets/poorcoin-logo.png" />
+
+  <link rel="icon" href="/assets/poorcoin-logo.png" />
+  <link rel="apple-touch-icon" href="/assets/poorcoin-logo.png" />
 </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
       <div class="brand">
-        <img class="logo" src="https://gateway.pinata.cloud/ipfs/bafybeihhtjwdnldwmn6u4yjhfh3a7owqslzgxb7c7znpg5ww4b3yky7e5e/poorcoin-logo.png" alt="PoorCoin Logo" />
+        <img class="logo" src="/assets/poorcoin-logo.png" alt="PoorCoin Logo" />
         <div>
           <h1>PoorCoin — Whitepaper</h1>
           <p class="tagline">Learn the basics, goals and tokenomics</p>
@@ -31,7 +37,6 @@
     <div class="container">
       <h3 class="section-title">PDF Viewer</h3>
       <div class="card" style="padding:0; overflow:hidden">
-        <!-- Put your actual whitepaper file as /whitepaper.pdf in the repo -->
         <iframe src="whitepaper.pdf" title="PoorCoin Whitepaper" style="width:100%; height:72vh; border:0;"></iframe>
       </div>
       <p style="text-align:center; margin-top:10px">
